--- a/WebApp/DiginovasiWebApp/src/app/material/add-material/add-material.component.html
+++ b/WebApp/DiginovasiWebApp/src/app/material/add-material/add-material.component.html
@@ -1,1 +1,38 @@
-<p>add-material works!</p>
+<h3 class="text-primary"><span class="fa fa-plus-circle"></span> Tambah Material</h3>
+<div class="row">
+  <div class="col-md-3">
+    <form #formCustomer [formGroup]="materialForm" (ngSubmit)="submitData()">
+      <div class="form-group">
+        <label class="lead">Masukan Kode</label>
+        <input class="form-control" formControlName="kode" />
+        <span class="text-danger" *ngIf="materialForm.get('kode').touched &&
+          materialForm.get('kode').dirty &&
+          materialForm.get('kode').errors?.required">Field 'kode' mandatory</span>
+      </div>
+      <div class="form-group">
+        <label class="lead">Masukan Deskripsi</label>
+        <input class="form-control" formControlName="deskripsi" />
+      </div>
+      <div class="form-group">
+        <label class="lead">Masukan Harga</label>
+        <input class="form-control" formControlName="harga" type="number"/>
+        <span class="text-danger" *ngIf="materialForm.get('harga').touched &&
+        materialForm.get('harga').dirty &&
+        materialForm.get('harga').errors?.required">Field 'harga' mandatory</span>
+      </div>
+      <div class="form-group">
+        <label class="lead">Pilih Satuan</label>
+        <select class="form-control" formControlName="selectedSatuan">
+          <option *ngFor="let item of listSatuan" [value]="item.id">{{item.kode}}</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <input type="file" (change)="gambarChange($event)" #formControlGambar />
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary mr-2" [disabled]="!materialForm.valid">Simpan</button>
+        <a type="button" class="btn btn-danger" routerLink="/material/list">Kembali</a>
+      </div>
+    </form>
+  </div>
+</div>
