--- a/WebApp/DiginovasiWebApp/src/app/material/list-material/list-material.component.html
+++ b/WebApp/DiginovasiWebApp/src/app/material/list-material/list-material.component.html
@@ -1,1 +1,19 @@
-<p>list-material works!</p>
+<h3 class="text-primary"><span class="fa fa-users"></span> List Material</h3>
+<div class="row">
+  <div class="col-md-12  my-4">
+    <a class="btn btn-primary" routerLink="/material/add"><span class="fa fa-plus-circle"></span> Tambah Material</a>
+  </div>
+  <div class="col-md-12  my-3">
+    <table datatable class="table table-bordered table-hover" [dtOptions]="dtOptions">
+      <thead class="bg-primary">
+        <tr>
+          <th class="text-light">Kode</th>
+          <th class="text-light">Deskripsi</th>
+          <th class="text-light">Harga</th>
+          <th class="text-light">Gambar</th>
+          <th class="text-light">Aksi</th>
+        </tr>
+      </thead>
+    </table>
+  </div>
+</div>
