--- a/WebApp/DiginovasiWebApp/src/app/satuan/add-satuan/add-satuan.component.html
+++ b/WebApp/DiginovasiWebApp/src/app/satuan/add-satuan/add-satuan.component.html
@@ -1,1 +1,21 @@
-<p>add-satuan works!</p>
+<h3 class="text-primary"><span class="fa fa-plus-circle"></span> Tambah Satuan</h3>
+<div class="row">
+  <div class="col-md-3">
+    <form #formCustomer [formGroup]="satuanForm" (ngSubmit)="submitData()">
+      <div class="form-group">
+        <label class="lead">Masukan Kode Satuan</label>
+        <input class="form-control" formControlName="kode" />
+        <span class="text-danger" *ngIf="satuanForm.get('kode').touched && satuanForm.get('kode').dirty && satuanForm.get('kode').errors?.required">Field 'kode' mandatory</span>
+      </div>
+      <div class="form-group">
+        <label class="lead">Masukan Deskripsi</label>
+        <input class="form-control" formControlName="deskripsi" />
+
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary mr-2" [disabled]="!satuanForm.valid">Simpan</button>
+        <a type="button" class="btn btn-danger" routerLink="/satuan/list">Kembali</a>
+      </div>
+    </form>
+  </div>
+</div>
