--- a/WebApp/DiginovasiWebApp/src/app/satuan/list-satuan/list-satuan.component.html
+++ b/WebApp/DiginovasiWebApp/src/app/satuan/list-satuan/list-satuan.component.html
@@ -1,1 +1,17 @@
-<p>list-satuan works!</p>
+<h3 class="text-primary"><span class="fa fa-users"></span> List Satuan</h3>
+<div class="row">
+  <div class="col-md-12  my-4">
+    <a class="btn btn-primary" routerLink="/satuan/add"><span class="fa fa-plus-circle"></span> Tambah Satuan</a>
+  </div>
+  <div class="col-md-12  my-3">
+    <table datatable class="table table-bordered table-hover" [dtOptions]="dtOptions">
+      <thead class="bg-primary">
+        <tr>
+          <th class="text-light">Kode</th>
+          <th class="text-light">Deskripsi</th>
+          <th class="text-light">Aksi</th>
+        </tr>
+      </thead>
+    </table>
+  </div>
+</div>
