Adding Sales Order Component

--- a/WebApp/DiginovasiWebApp/src/app/app.component.html
+++ b/WebApp/DiginovasiWebApp/src/app/app.component.html
@@ -28,7 +28,7 @@
             <a class="nav-link dropdown-toggle  text-light" ngbDropdownToggle>
               Sales
               <div class="dropdown-menu" ngbDropdownMenu>
-                <a class="dropdown-item" href="#" ngbDropdownItem><span class="fa fa-plus-circle"></span> Sales Order</a>
+                <a class="dropdown-item" href="#" ngbDropdownItem routerLink="sales-order/list"><span class="fa fa-plus-circle"></span> Sales Order</a>
                 <a class="dropdown-item" href="#" ngbDropdownItem><span class="fa fa-plus-square-o"></span> Sales Order Item</a>
               </div>
             </a>
