--- a/WebApp/DiginovasiWebApp/src/app/material/add-material/add-material.component.html
+++ b/WebApp/DiginovasiWebApp/src/app/material/add-material/add-material.component.html
@@ -1,7 +1,7 @@
 <h3 class="text-primary"><span class="fa fa-plus-circle"></span> Tambah Material</h3>
 <div class="row">
   <div class="col-md-3">
-    <form #formCustomer [formGroup]="materialForm" (ngSubmit)="submitData()">
+    <form [formGroup]="materialForm" (ngSubmit)="submitData()">
       <div class="form-group">
         <label class="lead">Masukan Kode</label>
         <input class="form-control" formControlName="kode" />
