--- a/WebApp/DiginovasiWebApp/src/app/app.component.html
+++ b/WebApp/DiginovasiWebApp/src/app/app.component.html
@@ -29,7 +29,7 @@
               Sales
               <div class="dropdown-menu" ngbDropdownMenu>
                 <a class="dropdown-item" href="#" ngbDropdownItem routerLink="sales-order/list"><span class="fa fa-plus-circle"></span> Sales Order</a>
-                <a class="dropdown-item" href="#" ngbDropdownItem><span class="fa fa-plus-square-o"></span> Sales Order Item</a>
+                <a class="dropdown-item" href="#" ngbDropdownItem routerLink="sales-order-item/list"><span class="fa fa-plus-square-o"></span> Sales Order Item</a>
               </div>
             </a>
           </li>
