--- a/WebApp/DiginovasiWebApp/src/app/material/list-material/list-material.component.html
+++ b/WebApp/DiginovasiWebApp/src/app/material/list-material/list-material.component.html
@@ -1,4 +1,4 @@
-<h3 class="text-primary"><span class="fa fa-users"></span> List Material</h3>
+<h3 class="text-primary">List Material</h3>
 <div class="row">
   <div class="col-md-12  my-4">
     <a class="btn btn-primary" routerLink="/material/add"><span class="fa fa-plus-circle"></span> Tambah Material</a>
