--- a/WebApp/DiginovasiWebApp/src/app/satuan/list-satuan/list-satuan.component.html
+++ b/WebApp/DiginovasiWebApp/src/app/satuan/list-satuan/list-satuan.component.html
@@ -1,4 +1,4 @@
-<h3 class="text-primary"><span class="fa fa-users"></span> List Satuan</h3>
+<h3 class="text-primary">List Satuan</h3>
 <div class="row">
   <div class="col-md-12  my-4">
     <a class="btn btn-primary" routerLink="/satuan/add"><span class="fa fa-plus-circle"></span> Tambah Satuan</a>
