--- a/WebApp/DiginovasiWebApp/src/app/sales-order/list-sales-order/list-sales-order/list-sales-order.component.html
+++ b/WebApp/DiginovasiWebApp/src/app/sales-order/list-sales-order/list-sales-order/list-sales-order.component.html
@@ -1,7 +1,7 @@
 <h3 class="text-primary"> List Sales Order</h3>
 <div class="row">
   <div class="col-md-12  my-4">
-    <a class="btn btn-primary" routerLink="/sales-order/add"><span class="fa fa-plus-circle"></span> Tambah Satuan</a>
+    <a class="btn btn-primary" routerLink="/sales-order/add"><span class="fa fa-plus-circle"></span> Tambah Sales Order</a>
   </div>
   <div class="col-md-12  my-3">
     <table datatable class="table table-bordered table-hover" [dtOptions]="dtOptions">
